--- a/index.html
+++ b/index.html
@@ -52,10 +52,8 @@
           </div>
           <div class="button">
             <button>
-              <img
-                src="/Users/Manu Praneeth/Documents/Manisha_practice/webdeveloper_html/frontend-mentor/product-preview-card-component-main/images/icon-cart.svg"
-                alt="shopping-cart-image"
-              />Add to Cart
+              <img src="./images/icon-cart.svg" alt="shopping-cart-image" />Add
+              to Cart
             </button>
           </div>
         </div>
